[tool.poetry]
name = "lem"
version = "0.1.1"
description = ""
authors = ["razzle <harry@razzle.cloud>"]

packages = [
    { include = "lem" }
]

[tool.poetry.scripts]
lem = 'lem.cli:cli'

[tool.poetry.dependencies]
python = "^3.9"
boto3 = "^1.24.40"
emoji = "^2.0.0"
blessed = "1.19.0"
halo = "^0.0.31"
click = "^8.1.3"
awscrt = "^0.13.14"
pathlib = "^1.0.1"
"ruamel.yaml" = "^0.17.21"
inquirer = "2.8.0"
requests = "^2.28.1"
paramiko = "^2.11.0"

[tool.poetry.dev-dependencies]
isort = "^5.10.1"
black = {version = "^22.6.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"